fixed some of the links
Signed-off-by: Jagjeevan Kashid <jagjeevandev97@gmail.com>

--- a/content/docs/Infra/reports/2024/2024-02-08-prod-redis-install.mdx
+++ b/content/docs/Infra/reports/2024/2024-02-08-prod-redis-install.mdx
@@ -8,7 +8,7 @@ date: "2024-02-08"
 
 ## Created CT
 
-I created a CT on off2 followings [How to create a new Container](../proxmox.md#how-to-create-a-new-container):
+I created a CT on off2 followings [How to create a new Container](/docs/Infra/virtualization/proxmox.mdx#how-to-create-a-new-container):
 * id 122 (off-redis)
 * 20Gb disk on zfs-hdd, noatime
 * added a disk on zfs-nvme mounted on /var/lib/redis/ with 5Gb size and noatime option.
@@ -17,9 +17,9 @@ I created a CT on off2 followings [How to create a new Container](../proxmox.md#
 
 I did not create a user.
 
-I also [configure postfix](../mail.md#postfix-configuration) and [tested it](../mail.md#testing-that-the-gateway-is-well-configured).
+I also [configure postfix](/docs/Infra/services/mail.mdx#postfix-configuration) and [tested it](/docs/Infra/services/mail.mdx#testing-that-the-gateway-is-well-configured).
 
-Cloned this repository in [/opt using a root key as deploy key](../how-to-have-server-config-in-git.md)
+Cloned this repository in [/opt using a root key as deploy key](/docs/Infra/how/how-to-have-server-config-in-git.mdx)
 
 ## Installed Redis
 
