--- a/content/docs/Infra/reports/2024/2024-09-04-move-off-query-to-moji.mdx
+++ b/content/docs/Infra/reports/2024/2024-09-04-move-off-query-to-moji.mdx
@@ -58,7 +58,7 @@ see [commit 504c3b419](https://github.com/openfoodfacts/openfoodfacts-infrastruc
 
 ### Configuring ipv6 on off2
 
-see [2024-09-05 adding ipv6 to off2](./2024-09-05-adding-ipv6-to-off2.md)
+see [2024-09-05 adding ipv6 to off2](/docs/Infra/reports/2024/2024-09-05-adding-ipv6-to-off2.mdx)
 
 ### Creating stunnel-client container on off2
 
@@ -67,7 +67,7 @@ Created container ([see doc](../proxmox.md/#how-to-create-a-new-container)):
 * using debian 12
 * disk 6G noatime, 2cores, 512Mb memory
 
-And did usual configurations, and cloned the [off-infrastructure repository](../how-to-have-server-config-in-git.md)
+And did usual configurations, and cloned the [off-infrastructure repository](/docs/Infra/how/how-to-have-server-config-in-git.mdx)
 
 ### Installing and configuring stunnel client
 
