--- a/content/docs/Robotoff/how-to-guides/add-predictor.mdx
+++ b/content/docs/Robotoff/how-to-guides/add-predictor.mdx
@@ -61,7 +61,7 @@ Here is a step-by-step guide to help you.
     The next step is to import the predictions in database and generate insights from these predictions. 
 
     <Callout type="info">
-      If you don't know the difference between insights and predictions, [check this page](../explanations/predictions.md).
+      If you don't know the difference between insights and predictions, [check this page](/docs/Robotoff/explanations/predictions.mdx).
     </Callout>
 
     You should create a new importer class subclassing `InsightImporter` in `robotoff.insights.importer` and add it to the `IMPORTERS` list.
