--- a/content/docs/Robotoff/how-to-guides/deployment/dev-install.mdx
+++ b/content/docs/Robotoff/how-to-guides/deployment/dev-install.mdx
@@ -66,7 +66,7 @@ You may choose Docker install (recommended, less chance to mess up with your sys
         The expected response is `{"status":"running"}`.
 
         <Callout type="info">
-          Also take a look at [maintenance](./maintenance.md) for ongoing maintenance tasks.
+          Also take a look at [maintenance](/docs/Robotoff/how-to-guides/deployment/maintenance.mdx) for ongoing maintenance tasks.
         </Callout>
       </Step>
     </Steps>
