--- a/content/docs/Robotoff/how-to-guides/deployment/maintenance.mdx
+++ b/content/docs/Robotoff/how-to-guides/deployment/maintenance.mdx
@@ -38,7 +38,7 @@ Two additional services are used:
 
 ## Quick Start
 
-See [dev-install](./dev-install.md) for initial setup.
+See [dev-install](/docs/Robotoff/how-to-guides/deployment/dev-install.mdx) for initial setup.
 
 You can then use:
 - `docker compose start [service-name]` or `docker compose stop [service-name]`
