--- a/content/docs/Robotoff/introduction/architecture.mdx
+++ b/content/docs/Robotoff/introduction/architecture.mdx
@@ -65,7 +65,7 @@ Robotoff allows to predict many information (also called _insights_), mostly fro
 
 Each time a contributor uploads a new image on Open Food Facts, the text on this image is extracted using Google Cloud Vision, an OCR (Optical Character Recognition) service. Robotoff receives a new event through a webhook each time this occurs, with the URLs of the image and the resulting OCR (as a JSON file).
 
-We use simple string matching algorithms to find patterns in the OCR text to generate new predictions. To have a more in-depth understanding of the difference between predictions and insights, see the [predictions](../explanations/predictions.md) page.
+We use simple string matching algorithms to find patterns in the OCR text to generate new predictions. To have a more in-depth understanding of the difference between predictions and insights, see the [predictions](/docs/Robotoff/explanations/predictions.mdx) page.
 
 ### Machine Learning Models
 
