--- a/content/docs/Robotoff/introduction/contributing.mdx
+++ b/content/docs/Robotoff/introduction/contributing.mdx
@@ -85,7 +85,7 @@ Ready to contribute code? Here's how to set up Robotoff for local development.
   <Step>
     ### Choose Installation Method
     
-    Choose between [docker install (recommended) or local install](../how-to-guides/deployment/dev-install.md) and run it.
+    Choose between [docker install (recommended) or local install](/docs/Robotoff/how-to-guides/deployment/dev-install.mdx) and run it.
   </Step>
 
   <Step>
@@ -140,7 +140,7 @@ Ready to contribute code? Here's how to set up Robotoff for local development.
     <Callout type="warn">
       Before running the test cases make sure you have a database created. Have a look at `.env` and `robotoff/settings.py` - the default database name, user, and password is: `postgres`
       
-      Configure them through environment (you may use `.env` if you use docker) as you like. See [dev install](../how-to-guides/deployment/dev-install.md) for more information about how to restore database dumps.
+      Configure them through environment (you may use `.env` if you use docker) as you like. See [dev install](/docs/Robotoff/how-to-guides/deployment/dev-install.mdx) for more information about how to restore database dumps.
     </Callout>
   </Step>
 
