--- a/content/docs/Robotoff/references/batch-job.mdx
+++ b/content/docs/Robotoff/references/batch-job.mdx
@@ -136,7 +136,7 @@ The batch job pipeline is structured as follows:
     The role of this endpoint is to load the data processed by the batch job and import the new *predictions* to the Robotoff database. 
 
     <Callout type="info">
-      Check this [page](../explanations/predictions.md) to understand the process Robotoff uses to transform raw *Predictions* into *Insights*.
+      Check this [page](/docs/Robotoff/explanations/predictions.mdx) to understand the process Robotoff uses to transform raw *Predictions* into *Insights*.
     </Callout>
 
     **Security:**
