--- a/content/docs/Robotoff/references/ingredients-spellcheck.mdx
+++ b/content/docs/Robotoff/references/ingredients-spellcheck.mdx
@@ -45,7 +45,7 @@ The current model (v1) shows the best performances over the closed-source LLMs o
 | **Our model** | **0.664** | 0.630 | **0.647** |
 
 <Callout type="info">
-  The model is integrated into Robotoff in [Batch Inference](batch-job.md) using Google Batch Job.
+  The model is integrated into Robotoff in [Batch Inference](/docs/Robotoff/references/batch-job.mdx) using Google Batch Job.
 </Callout>
 
 ## Evaluation Algorithm
@@ -225,6 +225,6 @@ Once the model is selected, the inference script with its dependencies are conta
   <Step>
     ### Batch Job Integration
     
-    The image is used within the [batch job pipeline](../references/batch-job.md), defined by the batch job type `ingredients-spellcheck`.
+    The image is used within the [batch job pipeline](/docs/Robotoff/references/batch-job.mdx), defined by the batch job type `ingredients-spellcheck`.
   </Step>
 </Steps>
