--- a/content/docs/Robotoff/references/package.mdx
+++ b/content/docs/Robotoff/references/package.mdx
@@ -23,7 +23,7 @@ This document presents a brief, high-level overview of Robotoff's library primar
   Robotoff is currently compatible with Python 3.11.
 </Callout>
 
-Robotoff can be installed [following dev install doc](../how-to-guides/deployment/dev-install.md)
+Robotoff can be installed [following dev install doc](/docs/Robotoff/how-to-guides/deployment/dev-install.mdx)
 
 ## Working with the Open Food Facts Dataset
 
