--- a/content/docs/Robotoff/references/predictions/nutrient-extraction.mdx
+++ b/content/docs/Robotoff/references/predictions/nutrient-extraction.mdx
@@ -260,6 +260,6 @@ We only create an insight if we detected at least one nutrient value that is not
 
 [^extract_nutrition_job]: See function `robotoff.workers.tasks.import_image.extract_nutrition_job`
 
-[^import_mechanism]: See [this page](../../explanations/predictions.md) for more details 
+[^import_mechanism]: See [this page](/docs/Robotoff/explanations/predictions.mdx) for more details 
 
 [^nutrient_extraction_import]: See `NutrientExtractionImporter.generate_candidates` for implementation
