--- a/content/docs/Robotoff/references/predictions/ingredient-detection.mdx
+++ b/content/docs/Robotoff/references/predictions/ingredient-detection.mdx
@@ -85,7 +85,7 @@ For every new uploaded image, the model is run on this image. As for all compute
 If some entities (i.e. ingredient lists) are detected, we create a `Prediction` in DB using the usual import mechanism, under the type `ingredient_list`.
 
 <Callout type="note">
-  See [this page](../../explanations/predictions.md) for more details about the import mechanism.
+  See [this page](/docs/Robotoff/explanations/predictions.mdx) for more details about the import mechanism.
 </Callout>
 
 ### Insight Generation Conditions
