--- a/content/docs/Search-a-licious/index.mdx
+++ b/content/docs/Search-a-licious/index.mdx
@@ -52,12 +52,11 @@ Build in-app features with a comprehensive API
 ## Technical Overview
 
 <Cards>
-<Card title="Web Components" href="./users/tutorial.mdx#building-a-search-interface" description="Quickly build your UI using any JavaScript framework, or plain HTML" />
-<Card title="Easy Configuration" href="./users/tutorial.mdx#create-a-configuration-file" description="One-stop file configuration to describe your content" />
-<Card title="Docker Deployment" href="./users/how-to-install.mdx" description="Ready-to-deploy Docker Compose file including all needed services" />
-<Card title="Data Import" href="./users/tutorial.mdx#import-the-data" description="One command initial data import from JSONL data export" />
+<Card title="Web Components" href="/docs/Search-a-licious/users/tutorial#building-a-search-interface" description="Quickly build your UI using any JavaScript framework, or plain HTML" />
+<Card title="Easy Configuration" href="/docs/Search-a-licious/users/tutorial#create-a-configuration-file" description="One-stop file configuration to describe your content" />
+<Card title="Docker Deployment" href="/docs/Search-a-licious/users/how-to-install" description="Ready-to-deploy Docker Compose file including all needed services" />
+<Card title="Data Import" href="/docs/Search-a-licious/users/tutorial#import-the-data" description="One command initial data import from JSONL data export" />
 </Cards>
-
 ### Core Technologies
 
 <Cards>
